--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">>
-	<!-- TODO Add Nodes -->
+
+<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
+   <children>
+      <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="92.0" layoutY="346.0" mnemonicParsing="false" text="Set Start" />
+      <Button layoutX="511.0" layoutY="346.0" mnemonicParsing="false" text="Set End" />
+      <Label layoutX="64.0" layoutY="384.0" text="Start Time:" />
+      <Label layoutX="486.0" layoutY="384.0" text="End Time:" />
+      <TextField layoutX="551.0" layoutY="379.0" prefHeight="26.0" prefWidth="83.0" />
+      <TextField layoutX="130.0" layoutY="380.0" prefHeight="26.0" prefWidth="83.0" />
+   </children>
 </AnchorPane>
-
