--- a/ProjectBittern/src/edu/augustana/csc285/bittern/OpeningScreen.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/OpeningScreen.fxml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.OpeningScreenController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.OpeningScreenController">
+   <center>
+      <Pane prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="browseButton" layoutX="49.0" layoutY="248.0" mnemonicParsing="false" onAction="#handleBrowse" text="Browse" />
+            <Label fx:id="nameLabel" layoutX="76.0" layoutY="67.0" text="Chick Tracker" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold Italic" size="39.0" />
+               </font></Label>
+            <Label fx:id="fileNameLabel" layoutX="121.0" layoutY="252.0" prefHeight="17.0" prefWidth="248.0" />
+            <Button fx:id="confirmButton" layoutX="50.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm" />
+         </children>
+      </Pane>
+   </center>
 </BorderPane>
