--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
+<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
    <children>
       <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button layoutX="92.0" layoutY="346.0" mnemonicParsing="false" text="Set Start" />
-      <Button layoutX="511.0" layoutY="346.0" mnemonicParsing="false" text="Set End" />
-      <Label layoutX="64.0" layoutY="384.0" text="Start Time:" />
-      <Label layoutX="486.0" layoutY="384.0" text="End Time:" />
-      <TextField layoutX="551.0" layoutY="379.0" prefHeight="26.0" prefWidth="83.0" />
-      <TextField layoutX="130.0" layoutY="380.0" prefHeight="26.0" prefWidth="83.0" />
+      <Button layoutX="196.0" layoutY="333.0" mnemonicParsing="false" text="Set Start" />
+      <Button layoutX="195.0" layoutY="367.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="61.0" text="Set End" />
+      <Label layoutX="37.0" layoutY="337.0" text="Start Time:" />
+      <Label layoutX="39.0" layoutY="371.0" text="End Time:" />
+      <TextField layoutX="104.0" layoutY="367.0" prefHeight="26.0" prefWidth="83.0" />
+      <TextField layoutX="104.0" layoutY="332.0" prefHeight="26.0" prefWidth="83.0" />
+      <Button layoutX="522.0" layoutY="393.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
    </children>
 </AnchorPane>
