--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -18,5 +18,6 @@
       <Button fx:id="confirmButton" layoutX="522.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
       <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
       <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
+      <Label fx:id="timeLabel" layoutX="37.0" layoutY="345.0" prefHeight="17.0" prefWidth="52.0" />
    </children>
 </AnchorPane>
