--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
+<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
    <children>
       <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
       <Label layoutX="37.0" layoutY="393.0" text="Start Time:" />
@@ -16,8 +16,8 @@
       <TextField fx:id="endTimeField" layoutX="104.0" layoutY="432.0" onAction="#handleEnd" prefHeight="26.0" prefWidth="83.0" />
       <TextField fx:id="startTimeField" layoutX="104.0" layoutY="388.0" onAction="#handleStart" prefHeight="26.0" prefWidth="83.0" />
       <Button fx:id="confirmButton" layoutX="522.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
-      <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
-      <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
-      <Label fx:id="timeLabel" layoutX="37.0" layoutY="345.0" prefHeight="17.0" prefWidth="52.0" />
+      <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="122.0" pickOnBounds="true" preserveRatio="true" />
+      <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="129.0" layoutY="355.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
+      <Label fx:id="timeLabel" layoutX="10.0" layoutY="353.0" prefHeight="17.0" prefWidth="109.0" text="TIme in second: " />
    </children>
 </AnchorPane>
