--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,13 +10,11 @@
 <AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
    <children>
       <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label layoutX="37.0" layoutY="393.0" text="Start Time:" />
-      <Label layoutX="39.0" layoutY="436.0" text="End Time:" />
-      <TextField fx:id="endTimeField" layoutX="104.0" layoutY="432.0" onAction="#handleEnd" prefHeight="26.0" prefWidth="83.0" />
-      <TextField fx:id="startTimeField" layoutX="104.0" layoutY="388.0" onAction="#handleStart" prefHeight="26.0" prefWidth="83.0" />
       <Button fx:id="confirmButton" layoutX="522.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
       <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
       <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
-      <Label fx:id="timeLabel" layoutX="37.0" layoutY="345.0" prefHeight="17.0" prefWidth="52.0" />
+      <Label fx:id="timeLabel" layoutX="33.0" layoutY="352.0" prefHeight="17.0" prefWidth="52.0" />
+      <Button layoutX="96.0" layoutY="393.0" mnemonicParsing="false" text="Set Start" />
+      <Button layoutX="212.0" layoutY="393.0" mnemonicParsing="false" text="Set End" />
    </children>
 </AnchorPane>
