--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
+<AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
    <children>
       <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="confirmButton" layoutX="522.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
       <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
       <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
       <Label fx:id="timeLabel" layoutX="33.0" layoutY="352.0" prefHeight="17.0" prefWidth="52.0" />
-      <Button layoutX="96.0" layoutY="393.0" mnemonicParsing="false" text="Set Start" />
-      <Button layoutX="212.0" layoutY="393.0" mnemonicParsing="false" text="Set End" />
+      <Button fx:id="startFrameButton" layoutX="96.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleStart" text="Set Start" />
+      <Button fx:id="endFrameButton" layoutX="212.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleEnd" text="Set End" />
    </children>
 </AnchorPane>
