--- a/ProjectBittern/src/edu/augustana/csc285/bittern/PlayVideoScreen.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/PlayVideoScreen.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.PlayVideoController">
    <children>
       <ImageView fx:id="myImageView" fitHeight="360.0" fitWidth="667.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="playButton" layoutX="104.0" layoutY="401.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
