--- a/ProjectBittern/src/edu/augustana/csc285/bittern/PlayVideoScreen.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/PlayVideoScreen.fxml
@@ -8,9 +8,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.PlayVideoController">
    <children>
-      <ImageView fx:id="myImageView" fitHeight="360.0" fitWidth="667.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="playButton" layoutX="104.0" layoutY="401.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
+      <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="playButton" layoutX="305.0" layoutY="397.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
       <Label fx:id="timeLabel" layoutX="612.0" layoutY="359.0" prefHeight="17.0" prefWidth="46.0" />
-      <Slider fx:id="sliderBar" layoutX="26.0" layoutY="360.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="584.0" />
+      <Slider fx:id="sliderBar" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
    </children>
 </AnchorPane>
