--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -10,13 +10,13 @@
 <AnchorPane prefHeight="492.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
    <children>
       <BorderPane layoutX="-78.0" layoutY="-154.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="confirmButton" layoutX="522.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="52.0" prefWidth="101.0" text="Confirm" />
+      <Button fx:id="confirmButton" layoutX="434.0" layoutY="410.0" mnemonicParsing="false" onAction="#handleConfirm" prefHeight="50.0" prefWidth="100.0" text="Confirm" />
       <ImageView fx:id="myImageView" fitHeight="353.0" fitWidth="440.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true" />
       <Slider fx:id="sliderBar" blockIncrement="33.0" layoutX="114.0" layoutY="353.0" onDragDetected="#handleSlider" prefHeight="14.0" prefWidth="426.0" />
       <Label fx:id="timeLabel" layoutX="33.0" layoutY="352.0" prefHeight="17.0" prefWidth="52.0" />
-      <Button fx:id="startFrameButton" layoutX="147.0" layoutY="433.0" mnemonicParsing="false" onAction="#handleStart" text="Set Start" />
-      <Button fx:id="endFrameButton" layoutX="340.0" layoutY="433.0" mnemonicParsing="false" onAction="#handleEnd" text="Set End" />
-      <Label fx:id="startTimeLabel" layoutX="85.0" layoutY="402.0" prefHeight="17.0" prefWidth="134.0" text="Start Time: " />
-      <Label fx:id="endTimeLabel" layoutX="267.0" layoutY="402.0" prefHeight="17.0" prefWidth="134.0" text="End Time: " />
+      <Button fx:id="startFrameButton" layoutX="114.0" layoutY="410.0" mnemonicParsing="false" onAction="#handleStart" prefHeight="50.0" prefWidth="100.0" text="Set Start" />
+      <Button fx:id="endFrameButton" layoutX="274.0" layoutY="410.0" mnemonicParsing="false" onAction="#handleEnd" prefHeight="50.0" prefWidth="100.0" text="Set End" />
+      <Label fx:id="startTimeLabel" layoutX="114.0" layoutY="380.0" prefHeight="17.0" prefWidth="124.0" text="Start Time: " />
+      <Label fx:id="endTimeLabel" layoutX="274.0" layoutY="380.0" prefHeight="17.0" prefWidth="124.0" text="End Time: " />
    </children>
 </AnchorPane>
