--- a/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<BorderPane prefHeight="671.0" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.MainWindowController">
+   <top>
+      <BorderPane BorderPane.alignment="CENTER">
+         <center>
+            <Label prefHeight="17.0" prefWidth="88.0" text="Current Frame: " BorderPane.alignment="CENTER_RIGHT" />
+         </center>
+         <right>
+            <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="85.0" BorderPane.alignment="CENTER" />
+         </right>
+      </BorderPane>
+   </top>
+   <center>
+      <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="videoView" pickOnBounds="true" preserveRatio="true" />
+            <Slider fx:id="sliderBar" />
+         </children>
+      </VBox>
+   </center>
+   <bottom>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="startTimeButton" layoutX="147.0" layoutY="89.0" mnemonicParsing="false" text="Set Start Time" />
+            <Button fx:id="endTimeButton" layoutX="149.0" layoutY="136.0" mnemonicParsing="false" text="Set End Time" />
+            <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" text="Play Video" />
+            <Button fx:id="autoTrackButton" layoutX="314.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleStartAutotracking" text="Start Auto-Tracking" />
+            <Label layoutX="468.0" layoutY="93.0" text="Progress: " />
+            <ProgressBar fx:id="progressAutoTrack" layoutX="539.0" layoutY="92.0" prefWidth="200.0" progress="0.0" />
+            <Label fx:id="startTimeLabel" layoutX="56.0" layoutY="92.0" prefHeight="17.0" prefWidth="70.0" />
+            <Label fx:id="endTimeLabel" layoutX="60.0" layoutY="140.0" prefHeight="17.0" prefWidth="66.0" />
+         </children>
+      </AnchorPane>
+   </bottom>
+</BorderPane>
