--- a/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
@@ -31,9 +31,9 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="startTimeButton" layoutX="147.0" layoutY="89.0" mnemonicParsing="false" text="Set Start Time" />
-            <Button fx:id="endTimeButton" layoutX="149.0" layoutY="136.0" mnemonicParsing="false" text="Set End Time" />
-            <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" text="Play Video" />
+            <Button fx:id="startTimeButton" layoutX="147.0" layoutY="89.0" mnemonicParsing="false" onAction="#handleStart" text="Set Start Time" />
+            <Button fx:id="endTimeButton" layoutX="149.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleEnd" text="Set End Time" />
+            <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" onAction="#handlePlay" text="Play Video" />
             <Button fx:id="autoTrackButton" layoutX="314.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleStartAutotracking" text="Start Auto-Tracking" />
             <Label layoutX="468.0" layoutY="93.0" text="Progress: " />
             <ProgressBar fx:id="progressAutoTrack" layoutX="539.0" layoutY="92.0" prefWidth="200.0" progress="0.0" />
