--- a/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
@@ -24,7 +24,7 @@
       <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fx:id="videoView" onMouseClicked="#getPoint" pickOnBounds="true" preserveRatio="true" />
-            <Slider fx:id="sliderBar" onDragDetected="#handleSlider" />
+            <Slider fx:id="sliderBar" />
          </children>
       </VBox>
    </center>
