--- a/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
@@ -21,7 +21,11 @@
    <center>
       <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="videoView" onMouseClicked="#getPoint" pickOnBounds="true" preserveRatio="true" />
+            <BorderPane fx:id="drawingBoard" onMouseClicked="#handleDrawingBoard">
+               <center>
+                  <ImageView fx:id="videoView" onMouseClicked="#getPoint" pickOnBounds="true" preserveRatio="true" />
+               </center>
+            </BorderPane>
             <Slider fx:id="sliderBar" onDragDetected="#handleSlider" />
          </children>
       </VBox>
