--- a/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/MainWindow.fxml
@@ -23,11 +23,7 @@
    <center>
       <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
          <children>
-            <BorderPane fx:id="drawingBoard" onMouseClicked="#handleDrawingBoard">
-               <center>
-                  <ImageView fx:id="videoView" onMouseClicked="#getPoint" pickOnBounds="true" preserveRatio="true" />
-               </center>
-            </BorderPane>
+            <ImageView fx:id="videoView" pickOnBounds="true" preserveRatio="true" />
             <Slider fx:id="sliderBar" />
          </children>
       </VBox>
@@ -37,14 +33,13 @@
          <children>
             <Button fx:id="startTimeButton" layoutX="147.0" layoutY="89.0" mnemonicParsing="false" onAction="#handleStart" text="Set Start Time" />
             <Button fx:id="endTimeButton" layoutX="149.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleEnd" text="Set End Time" />
-            <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" onAction="#handlePlay" text="Play Video" />
             <Button fx:id="autoTrackButton" layoutX="314.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleStartAutotracking" text="Start Auto-Tracking" />
             <Label layoutX="468.0" layoutY="93.0" text="Progress: " />
             <ProgressBar fx:id="progressAutoTrack" layoutX="539.0" layoutY="92.0" prefWidth="200.0" progress="0.0" />
             <Label fx:id="startTimeLabel" layoutX="56.0" layoutY="92.0" prefHeight="17.0" prefWidth="70.0" />
             <Label fx:id="endTimeLabel" layoutX="60.0" layoutY="140.0" prefHeight="17.0" prefWidth="66.0" />
             <Button fx:id="backButton" layoutX="21.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
-            <Button fx:id="exportButton" layoutX="687.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
+            <Button fx:id="nextButton" layoutX="678.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleNext" text="Next" />
          </children>
       </AnchorPane>
    </bottom>
