--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -33,7 +34,9 @@
             <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" onAction="#handlePlay" text="Play Video" />
             <Button fx:id="backButton" layoutX="21.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <Button fx:id="exportButton" layoutX="687.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
-            <Button fx:id="chickButton" layoutX="676.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleChick" text="Add Chick" />
+            <TextField fx:id="nameField" layoutX="563.0" layoutY="88.0" onAction="#handleName" promptText="Name of  tracked chick" />
+            <Button fx:id="previousButton" layoutX="10.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePrevious" text="Previous Sec" />
+            <Button fx:id="nextButton" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNext" text="Next Sec" />
          </children>
       </AnchorPane>
    </bottom>
