--- a/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -33,20 +32,11 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="lengthButton" layoutX="185.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleLengthButton" text="Set Length" />
-            <Button fx:id="widthButton" layoutX="185.0" layoutY="65.0" mnemonicParsing="false" onAction="#handleWidthButton" prefHeight="25.0" prefWidth="73.0" text="Set Width" />
-            <Label layoutX="35.0" layoutY="30.0" prefHeight="17.0" prefWidth="90.0" text="Length in Pixels:" />
-            <Label layoutX="35.0" layoutY="65.0" prefHeight="17.0" prefWidth="90.0" text="Width in Pixels: " />
-            <Label fx:id="lengthLabel" layoutX="125.0" layoutY="30.0" prefHeight="17.0" prefWidth="40.0" />
-            <Label fx:id="widthLabel" layoutX="125.0" layoutY="65.0" prefHeight="17.0" prefWidth="40.0" />
             <Button fx:id="confirmButton" layoutX="673.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm" />
             <Button fx:id="backButton" layoutX="35.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
-            <Label layoutX="285.0" layoutY="30.0" text="Actual Length: " />
-            <Label layoutX="285.0" layoutY="65.0" text="Actual Width: " />
-            <TextField fx:id="lengthTextField" layoutX="370.0" layoutY="30.0" onAction="#setActualLength" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
-            <TextField fx:id="widthTextField" layoutX="370.0" layoutY="65.0" onAction="#setActualWidth" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
-            <ComboBox fx:id="chicksComboBox" layoutX="552.0" layoutY="30.0" onAction="#handleComboBox" prefHeight="25.0" prefWidth="43.0" visibleRowCount="3" />
-            <Label layoutX="445.0" layoutY="30.0" prefHeight="17.0" prefWidth="107.0" text="Number of Chicks" />
+            <Label layoutX="430.0" layoutY="104.0" text="Actual Length : " />
+            <TextField fx:id="setActualLength" layoutX="527.0" layoutY="100.0" onAction="#setActualLength" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
+            <Button fx:id="XAxisButton" layoutX="154.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleCalibrationTool" text="Calibration Tool" />
          </children>
       </AnchorPane>
    </bottom>
