--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -31,12 +32,12 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="playButton" layoutX="338.0" layoutY="136.0" mnemonicParsing="false" onAction="#handlePlay" text="Play Video" />
             <Button fx:id="backButton" layoutX="21.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <Button fx:id="exportButton" layoutX="687.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
             <TextField fx:id="nameField" layoutX="563.0" layoutY="88.0" onAction="#handleName" promptText="Name of  tracked chick" />
-            <Button fx:id="previousButton" layoutX="10.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePrevious" text="Previous Sec" />
+            <Button fx:id="previousButton" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePrevious" text="Previous Sec" />
             <Button fx:id="nextButton" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNext" text="Next Sec" />
+            <ComboBox fx:id="chicksBox" layoutX="18.0" layoutY="54.0" prefWidth="150.0" promptText="Current Chick" visibleRowCount="3" />
          </children>
       </AnchorPane>
    </bottom>
