--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
+<BorderPane prefHeight="800" prefWidth="761.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
    <top>
       <BorderPane BorderPane.alignment="CENTER">
          <center>
-            <Label prefHeight="17.0" prefWidth="88.0" text="Current TIme: " BorderPane.alignment="CENTER_RIGHT" />
+            <Label prefHeight="17.0" prefWidth="88.0" text="Current Time: " BorderPane.alignment="CENTER_RIGHT" />
          </center>
          <right>
             <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="85.0" BorderPane.alignment="CENTER" />
