--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
+<BorderPane prefHeight="850" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
    <top>
       <BorderPane BorderPane.alignment="CENTER">
          <center>
@@ -25,6 +26,7 @@
       <VBox prefHeight="676.0" prefWidth="761.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fx:id="videoView" pickOnBounds="true" preserveRatio="true" />
+            <Canvas fx:id="progressCanvas" height="15.0" width="763.0" />
             <Slider fx:id="sliderBar" />
          </children>
       </VBox>
