cleaned up some... calibration and manual

--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -36,12 +35,10 @@
          <children>
             <Button fx:id="backButton" layoutX="21.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <Button fx:id="exportButton" layoutX="687.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
-            <TextField fx:id="nameField" layoutX="563.0" layoutY="88.0" onAction="#handleName" promptText="Name of  tracked chick" />
-            <Button fx:id="previousButton" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePrevious" text="Previous" />
-            <Button fx:id="nextButton" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNext" text="Next" />
-            <ComboBox fx:id="chicksBox" layoutX="18.0" layoutY="54.0" prefWidth="150.0" promptText="Current Chick" visibleRowCount="3" />
-            <Button fx:id="playButton" layoutX="21.0" layoutY="101.0" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
-            <ComboBox fx:id="intervalBox" layoutX="257.0" layoutY="14.0" prefHeight="27.0" prefWidth="191.0" promptText="Set Interval in Seconds" visibleRowCount="3" />
+            <Button fx:id="previousButton" layoutX="274.0" layoutY="14.0" minWidth="60.0" mnemonicParsing="false" onAction="#handlePrevious" prefWidth="50.0" text="Back" />
+            <Button fx:id="nextButton" layoutX="424.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNext" prefWidth="60.0" text="Forward" />
+            <ComboBox fx:id="chicksBox" layoutX="304.0" layoutY="56.0" prefWidth="150.0" promptText="Current Chick" visibleRowCount="3" />
+            <Button fx:id="playButton" layoutX="349.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlePlay" prefHeight="25.0" prefWidth="60.0" text="Play" />
          </children>
       </AnchorPane>
    </bottom>
