--- a/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/CalibrationWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -36,10 +37,13 @@
             <Button fx:id="backButton" layoutX="35.0" layoutY="157.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <Label layoutX="433.0" layoutY="113.0" text="Actual Length : " />
             <TextField fx:id="setActualLengthY" layoutX="538.0" layoutY="109.0" onAction="#setActualLengthY" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
-            <Button fx:id="setX" layoutX="152.0" layoutY="52.0" mnemonicParsing="false" onAction="#handleSetX" text="Set X" />
-            <Button fx:id="setY" layoutX="153.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleSetY" text="Set Y" />
+            <Button fx:id="setX" layoutX="629.0" layoutY="52.0" mnemonicParsing="false" onAction="#handleSetX" text="Set X" />
+            <Button fx:id="setY" layoutX="630.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleSetY" text="Set Y" />
             <Label layoutX="433.0" layoutY="56.0" text="Actual Length : " />
             <TextField fx:id="setActualLengthX" layoutX="538.0" layoutY="52.0" onAction="#setActualLengthX" prefHeight="25.0" prefWidth="46.0" promptText="in cm" />
+            <ComboBox fx:id="stepBox" layoutX="56.0" layoutY="27.0" onAction="#handleStepBox" prefHeight="25.0" prefWidth="105.0" promptText="Time Step" />
+            <ComboBox fx:id="chicksBox" layoutX="56.0" layoutY="73.0" prefHeight="25.0" prefWidth="105.0" promptText="Chicks" />
+            <TextField fx:id="nameField" layoutX="193.0" layoutY="73.0" onAction="#handleName" prefHeight="25.0" prefWidth="103.0" promptText="chick name" />
          </children>
       </AnchorPane>
    </bottom>
