--- a/ProjectBittern/src/edu/augustana/csc285/bittern/AutoTrackWindowController.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/AutoTrackWindowController.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.AutoTrackWindowController">
+<BorderPane prefHeight="800" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.AutoTrackWindowController">
    <top>
-      <BorderPane BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="15.0" prefWidth="750.0" BorderPane.alignment="CENTER">
          <center>
             <Label prefHeight="17.0" prefWidth="88.0" text="Current Frame: " BorderPane.alignment="CENTER_RIGHT" />
          </center>
