--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,11 +8,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="761.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
+<BorderPane prefHeight="820.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.ManualTrackWindowController">
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -24,36 +22,33 @@
             <Button fx:id="exportButton" layoutX="699.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
             <Button fx:id="backButton" layoutX="14.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
             <ComboBox fx:id="tracksBox" layoutX="26.0" layoutY="53.0" onAction="#handleTracksBox" prefWidth="150.0" promptText="Auto Tracks" />
+            <Label fx:id="startFrameLabel" layoutX="639.0" layoutY="32.0" prefHeight="17.0" prefWidth="85.0" />
+            <Label fx:id="currentFrameLabel" layoutX="784.0" layoutY="109.0" prefHeight="17.0" prefWidth="69.0" />
          </children>
       </AnchorPane>
    </bottom>
-   <top>
-      <FlowPane hgap="30.0" prefHeight="23.0" prefWidth="743.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label prefHeight="17.0" prefWidth="88.0" text="Start Time: " />
-            <Label fx:id="startFrameLabel" prefHeight="17.0" prefWidth="85.0" />
-            <Label prefHeight="17.0" prefWidth="76.0" text="End Time:" />
-            <Label fx:id="endFrameLabel" prefHeight="17.0" prefWidth="78.0" />
-            <Label text="Current Time:" />
-            <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="69.0" />
-         </children>
-         <BorderPane.margin>
-            <Insets left="20.0" />
-         </BorderPane.margin>
-      </FlowPane>
-   </top>
    <center>
-      <VBox BorderPane.alignment="CENTER">
+      <VBox prefWidth="750.0" BorderPane.alignment="CENTER">
          <children>
-            <StackPane prefHeight="575.0">
+            <StackPane fx:id="stackPane" prefHeight="575.0" prefWidth="750.0">
                <children>
                   <ImageView fx:id="videoView" pickOnBounds="true" preserveRatio="true" />
-                  <Canvas fx:id="drawingCanvas" height="547.0" width="762.0" />
+                  <Canvas fx:id="drawingCanvas" height="547.0" width="750.0" />
                </children>
             </StackPane>
-            <Canvas fx:id="progressCanvas" height="15.0" width="763.0" />
-            <Slider fx:id="sliderBar" prefHeight="14.0" prefWidth="763.0" />
+            <Canvas fx:id="progressCanvas" height="15.0" width="750.0" />
+            <Slider fx:id="sliderBar" prefHeight="14.0" prefWidth="750.0" />
          </children>
       </VBox>
    </center>
+   <top>
+      <BorderPane prefHeight="23.0" BorderPane.alignment="CENTER">
+         <center>
+            <Label text="Current Time:" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <Label fx:id="endFrameLabel" prefHeight="17.0" prefWidth="78.0" BorderPane.alignment="CENTER" />
+         </right>
+      </BorderPane>
+   </top>
 </BorderPane>
